Replace new Boolean with Boolean.valueOf Extract common string constant and add NON-NLS comments
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/branches/rel-2-1@333002 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 9375933ab3a38c63a4844c8720a2acce9f32da54